  (Nicolás Ojeda Bär, report by Gabriel Scherer, review by Daniel Bünzli,
  Gabriel Scherer and David Allsopp)

- #10565: Toplevel value printing: truncate strings only after 8 bytes.
  (Wiktor Kuchta, review by Xavier Leroy)

- #10527: Show "#help;; for help" at toplevel startup
  (Wiktor Kuchta, review by David Allsopp and Florian Angeletti)

### Debugging:

- #10517, #10594: when running ocamldebug on a program linked with the
  threads library, don't fail immediately; instead, allow debugging
  until the program creates a thread for the first time, then fail cleanly.
  (Xavier Leroy, report by @anentropic, review by Gabriel Scherer)

- #9621: Pack the ocamldebug modules to minimize clashes
  (Raphael Sousa Santos, review by Vincent Laviron and Gabriel Scherer)

### Manual and documentation:

- #7812, #10475: reworded the description of the behaviors of
  float->int conversions in case of overflow, and of iterators
  in case of concurrent modifications.
  (Xavier Leroy, report by whitequark, review by David Allsopp)

- #8697, #10666: add M, m, n options of the OCAMLRUNPARAM to manual and man page
  for ocamlrun command line options
  (Dong An and Anukriti Kumar, review by David Allsopp, Gabriel Scherer
   and Damien Doligez)

- #10281, #10685: Add description of C compiler on macOS and Windows platforms.
  (Dong An, review by Xavier Leroy and David Allsopp)

- #10589: Fix many typos (excess/inconsistent spaces) in the HTML manual.
  (Wiktor Kuchta, review by Florian Angeletti)

- #10605: manual, name few css classes to ease styling and maintainability.
  (Florian Angeletti, review by Wiktor Kuchta and Gabriel Scherer)

- #10668, #10669: the changelog (this file), LICENSE and README files are now
  installed as part of the distribution. The destination directory can be
  customized using the `--docdir` argument to `./configure`.
  (Nicolás Ojeda Bär, report by Daniel Bünzli, review by David Allsopp,
  Sébastien Hinderer, and Daniel Bünzli)
